--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -171,6 +171,14 @@ section {
         text-align: center;
     }
 
+    .h3 {
+        font: 15px Arial, Helvetica, sans-serif;
+        font-weight: 200;
+        margin: 1%;
+        color: lightgray;
+        text-align: center;
+    }
+
     ul {
         list-style: none;
         margin: 0;
@@ -234,9 +242,9 @@ section {
         font-size: 20px;
     }
 
-    .encriptado-text {
+    /* .encriptado-text {
         background-color: transparent;
-    }
+    } */
 
     .placeholder-image {
         position: absolute;
@@ -245,6 +253,27 @@ section {
         z-index: 0;
     }
 
+    .icon-container {
+        margin-top: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        bottom: 0;
+        padding-bottom: 1%;
+    }
+
+
+    .icon {
+        width: 50px;
+        height: 43px;
+        margin-left: 25px;
+        margin-right: 25px;
+        align-items: last baseline;
+        display: inline-block;
+    }
+
+
+
     .encriptar-text::placeholder {
         font-family: "Helvetica Neue";
         color: black;
@@ -252,12 +281,11 @@ section {
     }
 
     .boton-container {
-        margin-left: 5%;
-        margin-right: 5%;
+        margin-left: auto;
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100px;
+        height: 70px;
     }
 
     .boton {
