--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -107,205 +107,177 @@ section {
     display: block;
 }
 
-/*=============================================================================*/
 
-/* #div-principal{
+header {
+    background: linear-gradient(to right, #18223c, #131d6f);
     width: 100%;
-    height: 15%;
-    background-color: #ffffff;
-    margin-top: 2%;
-    margin-left: 3%;
-
-
-
-} */
-
-@media (max-width: 768px) and (orientation: portrait) {
-    #div-principal {
-        width: 100%;
-        height: 15%;
-        background-color: #ffffff;
-        margin-top: 2%;
-        margin-left: 3%;
-    }
-
-    img {
-        width: 4%;
-        height: 8%;
-        margin-left: 3%;
-        margin-top: 1.5%;
-    }
+    height: 5vw;
+    top: 0;
+    position: fixed;
 }
 
-/*=============================================================================*/
-@media (max-width: 1440px) and (orientation: landscape) {
-    header {
-        background: linear-gradient(to right, #18223c, #131d6f);
-        width: 100%;
-        height: 90px;
-        top: 0;
-        position: fixed;
-    }
+footer {
+    background: linear-gradient(to right, #18223c, #131d6f);
+    width: 100%;
+    height: 7vw;
+    bottom: 0;
+    position: fixed;
+}
 
-    footer {
-        background: linear-gradient(to right, #18223c, #131d6f);
-        width: 100%;
-        height: 90px;
-        bottom: 0;
-        position: fixed;
-    }
+.h1 {
+    font: 2.5vw "Helvetica Neue", Helvetica, sans-serif;
+    font-weight: 100%;
+    margin: 1%;
+    color: white;
+    text-align: center;
+}
 
-    .h1 {
-        font: 40px "Helvetica Neue", Helvetica, sans-serif;
-        font-weight: 800;
-        margin: 1%;
-        color: white;
-        text-align: center;
-    }
+.h2 {
+    font: 2vw Arial, Helvetica, sans-serif;
+    font-weight: 100%;
+    margin: 1%;
+    color: lightgray;
+    text-align: center;
+}
 
-    .h2 {
-        font: 30px Arial, Helvetica, sans-serif;
-        font-weight: 400;
-        margin: 1%;
-        color: lightgray;
-        text-align: center;
-    }
+.h3 {
+    font: 1.3vw Arial, Helvetica, sans-serif;
+    font-weight: 100%;
+    margin: 1%;
+    color: lightgray;
+    text-align: center;
+}
 
-    .h3 {
-        font: 15px Arial, Helvetica, sans-serif;
-        font-weight: 200;
-        margin: 1%;
-        color: lightgray;
-        text-align: center;
-    }
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
 
-    ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-    }
+li {
+    margin-right: 0.5vw;
+    margin-left: 0.5vw;
+}
 
-    li {
-        margin-right: 10%;
-    }
+a {
+    color: white;
+    font-family: "Helvetica Neue", sans-serif;
+    text-decoration: none;
+}
 
-    a {
-        color: white;
-        font-family: "Helvetica Neue", sans-serif;
-        text-decoration: none;
-    }
+.contenedor {
+    margin-top: 11vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    margin-bottom: 0;
+    background-color: transparent;
+    border-radius: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
 
-    .contenedor {
-        margin-top: 10%;
-        margin-left: 5%;
-        margin-right: 5%;
-        margin-bottom: 0;
-        background-color: transparent;
-        border-radius: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 400px;
-    }
+.encriptar,
+.encriptado {
+    border-radius: 1vw;
+    width: 50vw;
+    height: 20vw;
+    margin: 1vw;
+    padding: 1.5vw;
+    background-color: #4795e5;
+    display: flex;
+    justify-content: center;
+}
 
-    .encriptar,
-    .encriptado {
-        border-radius: 10px;
-        width: 55%;
-        height: 80%;
-        margin: 2%;
-        padding: 2%;
-        background-color: #4795e5;
-        display: flex;
-        justify-content: center;
-    }
+.encriptado {
+    position: relative;
+}
 
-    .encriptado {
-        position: relative;
-    }
+.encriptar-text,
+.encriptado-text {
+    border-radius: 0.5vw;
+    border-color: #4795e5;
+    width: 40vw;
+    height: 20vw;
+    text-align: left;
+    text-align: top;
+    padding-top: 0;
+    padding-left: 0;
+    color: black;
+    resize: none;
+    font-family: "Helvetica Neue", sans-serif;
+    font-size: 100%;
+}
 
-    .encriptar-text,
-    .encriptado-text {
-        border-radius: 0.1px;
-        border-color: #4795e5;
-        width: 100%;
-        height: 100%;
-        text-align: left;
-        text-align: top;
-        padding-top: 0;
-        padding-left: 0;
-        color: black;
-        resize: none;
-        font-family: "Helvetica Neue", sans-serif;
-        font-size: 20px;
-    }
+/* .encriptado-text {
+    background-color: transparent;
+} */
 
-    /* .encriptado-text {
-        background-color: transparent;
-    } */
+.placeholder-image {
+    position: absolute;
+    top: 2;
+    left: 1;
+    z-index: 0;
+    width: 20vw;
+}
 
-    .placeholder-image {
-        position: absolute;
-        top: 2;
-        left: 1;
-        z-index: 0;
-    }
-
-    .icon-container {
-        margin-top: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        bottom: 0;
-        padding-bottom: 1%;
-    }
+.icon-container {
+    margin-left: 1vw;
+    margin-top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+    padding-bottom: 1vw;
+    position: relative;
+}
 
 
-    .icon {
-        width: 50px;
-        height: 43px;
-        margin-left: 25px;
-        margin-right: 25px;
-        align-items: last baseline;
-        display: inline-block;
-    }
+.icon {
+    width: 4vw;
+    height: 3.5vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    align-items: center;
+    display: inline-block;
+}
 
 
 
-    .encriptar-text::placeholder {
-        font-family: "Helvetica Neue";
-        color: black;
-        font-size: 20px;
-    }
+.encriptar-text::placeholder {
+    font-family: "Helvetica Neue";
+    color: black;
+    font-size: 1.5vw;
+}
 
-    .boton-container {
-        margin-left: auto;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 70px;
-    }
+.boton-container {
+    margin-left: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vw;
+}
 
-    .boton {
-        background-color: #6d7594;
-        margin: 2%;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        padding: 10px 20px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        width: 100px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+.boton {
+    background-color: #6d7594;
+    margin: 2%;
+    color: white;
+    border: none;
+    border-radius: 0.5vw;
+    padding: 1vw;
+    box-shadow: 0 1vw 2vw rgba(0, 0, 0, 0.2);
+    width: 8vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Helvetica Neue", sans-serif;
+    font-size: 1vw;
+}
 
-    .boton:hover {
-        transform: translateY(-5px);
-        background-color: #6c799b;
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.8);
-    }
-
+.boton:hover {
+    transform: translateY(-1vw);
+    background-color: #6c799b;
 }
